<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="title">My Nanodegree Apps !</string>
    <string name="movies">POPULAR MOVIES</string>
    <string name="stock">STOCK HAWK</string>
    <string name="buildbigger">BUILD IT BIGGER</string>
    <string name="material">MAKE YOUR APP MATERIAL</string>
    <string name="ubiquitous">GO UBIQUITOUS</string>
    <string name="capstone">CAPSTONE</string>
</resources>
